package ie.gmit.sw;

public class Document {
    private final String text;

    public Document(String text) {
        this.text = text;
    }

    public String getText() {
        return text;
    }
}
